--- a/app/views/form_option/alma.html.erb
+++ b/app/views/form_option/alma.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "service/option_alma" %>
+<%= javascript_include_tag "form_options/option_alma" %>
 
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
