--- a/app/views/form_option/option2.html.erb
+++ b/app/views/form_option/option2.html.erb
@@ -1,5 +1,5 @@
-<%= javascript_include_tag "service/option" %>
-<%= javascript_include_tag "service/size_panel" %>
+<%= javascript_include_tag "form_options/option" %>
+<%= javascript_include_tag "form_options/size_panel" %>
 <%= javascript_include_tag "voview" %>
 <%= stylesheet_link_tag  "voview", media: "all" %>
 
