--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,13 +94,16 @@
                 <%= link_to 'Cone Search', query_conesearch_path %>
               </li>
               <li>
-                <%= link_to 'Image Search', query_imagesearch_path %>
+                <%= link_to 'Image Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
               </li>
               <li>
-                <%= link_to 'Spectral Search', query_spectralsearch_path %>
+                <%= link_to 'Spectral Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
               </li>
               <li>
-                <%= link_to 'Table Search', query_tablesearch_path %>
+                <%= link_to 'Table Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;"%>
+              </li>
+              <li>
+                <%= link_to 'All Searches', query_all_searches_path %>
               </li>
             </ul>
           </li>
@@ -115,16 +118,16 @@
                 <%= link_to 'Option1', form_option_option1_path %>
               </li>
               <li>
-                <%= link_to 'Option2', form_option_option2_path %>
+                <%= link_to 'Option2', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
               </li>
               <li>
-                <%= link_to 'Option3', form_option_option3_path %>
+                <%= link_to 'Option3', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;"%>
               </li>
               <li>
-                <%= link_to 'Alma', form_option_alma_path %>
+                <%= link_to 'Alma', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
               </li>
               <li>
-                <%= link_to 'Alma2', form_option_alma2_path %>
+                <%= link_to 'Alma2', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
               </li>
             </ul>
           </li>
