code stylesheets reorganized

--- a/app/assets/stylesheets/unify/style.css.scss
+++ b/app/assets/stylesheets/unify/style.css.scss
@@ -7,7 +7,7 @@
 */
 
 /*Import app.css*/
-@import "app";
+@import "unify/app";
 
 /*Import Google Fonts*/
 @import url(http://fonts.googleapis.com/css?family=Monda:400,700);
