--- a/app/views/query/type_alma/_query_form.html.erb
+++ b/app/views/query/type_alma/_query_form.html.erb
@@ -31,30 +31,30 @@
 			<td id="position" class="tag-box tag-box-v6 col-sm-3" >
 				<%= render 'query/type_alma/boxes/position' %>
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3">
+			<td id="energy" class="tag-box tag-box-v6 col-sm-3">
 				<%= render 'query/type_alma/boxes/energy' %>
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3">
+			<td id="time" class="tag-box tag-box-v6 col-sm-3">
 				<%= render 'query/type_alma/boxes/time' %>								  	
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3">
+			<td id="polarisation" class="tag-box tag-box-v6 col-sm-3">
 				<%= render 'query/type_alma/boxes/polarization' %>								  	
 			</td>
 		</tr>
 		<tr>
-			<td class="tag-box tag-box-v6 col-sm-3" >
+			<td id="observation" class="tag-box tag-box-v6 col-sm-3" >
 				<%= render 'query/type_alma/boxes/observation' %>				  	
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3" >
+			<td id="project" class="tag-box tag-box-v6 col-sm-3" >
 				<%= render 'query/type_alma/boxes/project' %>
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3">
+			<td id="empty_td" class="tag-box tag-box-v6 col-sm-3">
 				<div >                        
 					<h4></h4>                        
 					<p></p>						    	                   
 				</div>
 			</td>
-			<td class="tag-box tag-box-v6 col-sm-3" >
+			<td id="options" class="tag-box tag-box-v6 col-sm-3" >
 				<%= render 'query/type_alma/boxes/options' %>
 			</td>
 		</tr>
