--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,6 +36,37 @@
   <!-- Recent Works -->
   <div class="headline"><h2>Recent News</h2></div>
   <div class="row">
+    <!-- New 3 -->
+    <div class="col-md-4 col-sm-6">
+      <div class="thumbnails thumbnail-style thumbnail-kenburn">
+        <div class="thumbnail-img">
+          <div class="overflow-hidden">
+            <%= image_tag "news/ivoa_newsletter_012_may_2014.jpg", class: 'img-responsive' %>          
+          </div>
+          <%= link_to "read more +", ivoa_newsletter_012_may_2014_path, class: "btn-more hover-effect" %>        
+        </div>
+        <div class="caption">
+          <h3><%= link_to "IVOA Newsletter 012 - May 2014", ivoa_newsletter_012_may_2014_path %></h3>
+          <p>The May 2014 issue of the IVOA Newsletter is now available. This biannual newsletter for astronomers is intended to highlight new capabilities of VO tools and technologies for doing astronomy research. It also lists recent papers and upcoming events. </p>
+        </div>
+      </div>
+    </div>
+    <!-- New 2 -->
+    <div class="col-md-4 col-sm-6">
+      <div class="thumbnails thumbnail-style thumbnail-kenburn">
+        <div class="thumbnail-img">
+          <div class="overflow-hidden">
+            <%= image_tag "news/chilean_development_of_astronomical_computing_for_alma.jpg", class: 'img-responsive' %>
+          </div>
+          <%= link_to "read more +", chilean_development_of_astronomical_computing_for_alma_path, class: "btn-more hover-effect" %>    
+        </div>
+        <div class="caption">
+          <h3><%= link_to "Chilean Development of Astronomical Computing for ALMA", chilean_development_of_astronomical_computing_for_alma_path %></h3>
+          <p>Once the Atacama Large Millimiter/submillimeter Array (ALMA) is functioning at full capacity, it will generate more than 750 GB of data each day (on the order of 250 TB/year). Chilean astronomers will need to be able to connect at a high data transmission speed...</p>
+        </div>
+      </div>
+    </div>
+    <!-- New 3 -->
     <div class="col-md-4 col-sm-6">
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
@@ -49,22 +80,7 @@
           <p>The project designed to manage and analyze the almost 250 terabytes of data that the Atacama Millimeter/submillimeter Array (ALMA) will generate each year has joined the International Virtual Observatory Alliance, becoming a key initiative in Chile's contribution to astroinformatics around the world...</p>
         </div>
       </div>
-    </div>
-
-    <div class="col-md-4 col-sm-6">
-      <div class="thumbnails thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden">
-            <%= image_tag "news/chilean_development_of_astronomical_computing_for_alma.jpg", class: 'img-responsive' %>
-          </div>
-          <%= link_to "read more +", chilean_development_of_astronomical_computing_for_alma_path, class: "btn-more hover-effect" %>    
-        </div>
-        <div class="caption">
-          <h3><%= link_to "Chilean joins International Virtual Observatory", chilean_development_of_astronomical_computing_for_alma_path %></h3>
-          <p>Once the Atacama Large Millimiter/submillimeter Array (ALMA) is functioning at full capacity, it will generate more than 750 GB of data each day (on the order of 250 TB/year). Chilean astronomers will need to be able to connect at a high data transmission speed...</p>
-        </div>
-      </div>
-    </div>
+    </div> 
   </div><!--/row-->
   <!-- End Recent Works -->
 
