--- a/app/views/news/ivoa_newsletter_012_may_2014.html.erb
+++ b/app/views/news/ivoa_newsletter_012_may_2014.html.erb
@@ -18,14 +18,13 @@
                 <div class="headline"><h2>IVOA Newsletter 012 - May 2014</h2></div>
                 <div class="blog-post-tags">
                     <ul class="list-unstyled list-inline blog-info">
-                        <li><i class="fa fa-calendar"></i> April 12, 2013</li>
+                        <li><i class="fa fa-calendar"></i>May 16, 2014</li>
                         <li><i class="fa fa-pencil"></i> <a class="hover-effect" href="http://ivoa.net/newsletter/012/">ivoa.net</a></li>
                     </ul>                                       
                 </div>
                 <div class="blog-img">
                      <%= image_tag "news/ivoa_newsletter_012_may_2014.jpg", class: "img-responsive"%>
                 </div>
-                <br>
                 <div align="justify">
                     <p> The May 2014 issue of the IVOA Newsletter is now available at <a href="http://ivoa.net/newsletter/012/">ivoa.net.</a></p>
                     <p>This biannual newsletter for astronomers is intended to highlight new capabilities of VO tools and technologies for doing astronomy research. It also lists recent papers and upcoming events.</p>
@@ -42,4 +41,5 @@
             <!--End Blog Post-->
         </div>
         <!-- End Left Sidebar -->
+    </div>
 </div>
