--- a/app/views/query/type_alma/_query_form.html.erb
+++ b/app/views/query/type_alma/_query_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "/form_option/alma", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'almaSearch' do %>
+<%= form_tag "/query/all_searches", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'almaSearch' do %>
 
 <div id="actions_states" class="alert fade in alert-info" style="margin-bottom:0px">
     <strong>Heads up! </strong> This will show the states of actions
