query multiple resources running, but under test catalogs

--- a/app/views/query/type_alma/_result_table.html.erb
+++ b/app/views/query/type_alma/_result_table.html.erb
@@ -1,16 +1,12 @@
 <div class="row tab-v3">
     <div class="col-sm-2">
-        <ul class="nav nav-pills nav-stacked"> 
-            <li class="active"><a href="#resource_1" data-toggle="tab">Name1</a></li>
-            <li><a href="#resource_2" data-toggle="tab"></i> Name2</a></li>                       
+        <ul id="resource_list"class="nav nav-pills nav-stacked"> 
+                                 
         </ul>                    
     </div>
     <div class="col-sm-10">
-        <div class="tab-content">
-            <div class="tab-pane active" id="resource_1">                    
-            </div>
-            <div class="tab-pane" id="resource_2">                         
-            </div>
+        <div id="resource_content" class="tab-content">
+            
         </div>                                    
     </div>
 </div>
