rotation icon added when the list of queries is processed

--- a/app/views/query/type_alma/result_tab.js.erb
+++ b/app/views/query/type_alma/result_tab.js.erb
@@ -1,3 +1,4 @@
+$("#estate_process_query_list").removeClass("fa fa-spinner fa-spin fa-lg");
 $('#resource_list').find('li').remove();
 $('#resource_content').children('div').remove();
 <% @votables.each_with_index do |(key, value), index| %>
