--- a/app/views/query/type_alma/_query_list.html.erb
+++ b/app/views/query/type_alma/_query_list.html.erb
@@ -3,6 +3,7 @@
 	<%= button_tag(type: "submit", class: "btn btn-default", name: "commit", value:"process_position_query_list", id: 'process_position_query_list', style: "display:inline-block") do %>
 	    Process
 	<% end %>
+	<i id="estate_process_query_list" class="" style="display:inline-block; margin-left:10px;"></i>
 	<br>
 	<table id= "query_list_table" class="table">
 		<thead>
