--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,22 @@
   <!-- Recent Works -->
   <div class="headline"><h2>Recent News</h2></div>
   <div class="row">
-    <!-- New 3 -->
+    <!-- Last New -->
+    <div class="col-md-4 col-sm-6">
+      <div class="thumbnails thumbnail-style thumbnail-kenburn">
+        <div class="thumbnail-img">
+          <div class="overflow-hidden">
+            <%= image_tag "news/spie_astronomical_telescopes_instrumentation_2014_2.jpg", class: 'img-responsive' %>
+          </div>
+          <%= link_to "read more +", spie_astronomical_telescopes_instrumentation_2014_path, class: "btn-more hover-effect" %>   
+        </div>
+        <div class="caption">
+          <h3><%= link_to "SPIE Astronomical Telescopes + Intrumentation 2014", spie_astronomical_telescopes_instrumentation_2014_path %></h3>
+          <p>SPIE is a not-for-profit international professional society for optics and photonics technology, founded in 1955. It organizes technical conferences, trade exhibitions, and continuing education programs for researchers and developers in the light-based fields of physics...</p>
+        </div>
+      </div>
+    </div> 
+    <!-- New 2 -->
     <div class="col-md-4 col-sm-6">
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
@@ -51,7 +66,7 @@
         </div>
       </div>
     </div>
-    <!-- New 2 -->
+    <!-- New 3 -->
     <div class="col-md-4 col-sm-6">
       <div class="thumbnails thumbnail-style thumbnail-kenburn">
         <div class="thumbnail-img">
@@ -66,21 +81,6 @@
         </div>
       </div>
     </div>
-    <!-- New 3 -->
-    <div class="col-md-4 col-sm-6">
-      <div class="thumbnails thumbnail-style thumbnail-kenburn">
-        <div class="thumbnail-img">
-          <div class="overflow-hidden">
-            <%= image_tag "news/chilean_joins_international_virtual_observatory.jpg", class: 'img-responsive' %>
-          </div>
-          <%= link_to "read more +", chilean_joins_international_virtual_observatory_path, class: "btn-more hover-effect" %>   
-        </div>
-        <div class="caption">
-          <h3><%= link_to "Chilean joins International Virtual Observatory", chilean_joins_international_virtual_observatory_path %></h3>
-          <p>The project designed to manage and analyze the almost 250 terabytes of data that the Atacama Millimeter/submillimeter Array (ALMA) will generate each year has joined the International Virtual Observatory Alliance, becoming a key initiative in Chile's contribution to astroinformatics around the world...</p>
-        </div>
-      </div>
-    </div> 
   </div><!--/row-->
   <!-- End Recent Works -->
 
