--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
                 <%= link_to 'Cone Search', query_conesearch_path %>
               </li>
               <li>
-                <%= link_to 'Image Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
+                <%= link_to 'Image Search', query_imagesearch_path %>
               </li>
               <li>
                 <%= link_to 'Spectral Search', '#', style: "cursor:Default; text-decoration:none; color:#D0D0D0;" %>
