A place for All News was added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,7 +34,9 @@
 <!--=== Content Part ===-->
 <div class="container"> 
   <!-- Recent Works -->
-  <div class="headline"><h2>Recent News</h2></div>
+<div class="headline"><h2>Recent News</h2>
+  <div class="pull-right"><a class="btn-u " href="all_news"><i class="fa fa-plus"></i>  More News</a></div>
+</div>
   <div class="row">
     <!-- Last New -->
     <div class="col-md-4 col-sm-6">
