--- a/app/views/news/spie_astronomical_telescopes_instrumentation_2014.html.erb
+++ b/app/views/news/spie_astronomical_telescopes_instrumentation_2014.html.erb
@@ -1,10 +1,11 @@
 <!--=== Breadcrumbs ===-->
 <div class="breadcrumbs margin-bottom-40">
   <div class="container">
-    <h1 class="pull-left">News</h1>
+    <h1 class="pull-left">New</h1>
     <ul class="pull-right breadcrumb">
       <li><%= link_to 'Home', root_path %></li>
-      <li class="active">News</li>
+      <li><%= link_to 'All News', all_news_path %></li>
+      <li class="active">New</li>
     </ul>
   </div><!--/container-->
 </div><!--/breadcrumbs-->
