SIA: more verifications + error report

--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -49,6 +49,7 @@
             </div>
             
             <!--=== Optionals ##needs to hide somehow##change css to otional (not red)===-->
+            <p>################################ OPTIONAL ################################</p>
 
             <div class="form-group">
               <%= label_tag :intersect, 'Intersect', class: 'col-sm-4 control-label' %>
@@ -74,7 +75,7 @@
              <div class="form-group">
               <%= label_tag :rotang, 'Rotang', class: 'col-sm-4 control-label' %>
               <div class="col-sm-5" data-popbox='default'>
-                  <%= number_field_tag :naxis, nil, class: 'form-control'%>
+                  <%= number_field_tag :rotang, nil, class: 'form-control'%>
               </div>
             </div>
 
