plus position scs w the resources ok from dachs

--- a/app/views/query/type_alma/boxes/_position.html.erb
+++ b/app/views/query/type_alma/boxes/_position.html.erb
@@ -1,7 +1,7 @@
 <h2 style="display:inline-block">Position</h2>
-<span id="plus_position" style="display:none; float:right;">
+<%= button_tag(type: "submit", class: "", name: "commit", value:"plus_position_query_list", id: 'plus_position', style: "display:none; float:right; background:none; border:none;") do %>
 	<i class="fa fa-plus"></i>
-</span>                       
+<% end %>                      
 <div class="group">
 	<%= label_tag :source_name_sesame, 'Source name (Sesame)', class: 'control-label' %>
 	<div class="container-input">
