SIA: some debugging + dachs returns xml, but irsa freezes

--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -48,7 +48,7 @@
               </div>
             </div>
             
-            <!--=== Optionals ##needs to hide somehow##change css to otional (not red)===-->
+            <!--=== Optionals ##needs to hide somehow ===-->
             <p>################################ OPTIONAL ################################</p>
 
             <div class="form-group">
