SIA: sources from http://dachs.lirae.cl:80/external/sia, query list working

--- a/app/views/query/imagesearch.html.erb
+++ b/app/views/query/imagesearch.html.erb
@@ -21,125 +21,17 @@
   <div class="row margin-bottom-30">
     <div class="col-md-8 md-margin-bottom-40 col-md-offset-2">
       
-      <!--=== Panel ===-->
       <div class="panel panel-default margin-bottom-40">
-        
-        <%= render 'panel_heading' %>
+        <%= render 'query/simple_image_search/query_form' %>
+      </div>
 
-        <div class="panel-body">                    
-          <!--=== Form ===-->
-          <%= form_tag "/query/imagesearch", remote: true, class: 'form-horizontal', role: 'form', method: 'get' , name: 'searchForm' do %>
-            <div class="form-group">
-              <%= label_tag :ra, 'RA', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= text_field_tag :ra, nil, class: 'form-control' %>
-              </div>
-            </div>
-            <div class="form-group">
-              <%= label_tag :dec, 'DEC', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5"  data-popbox='default'>
-                  <%= text_field_tag :dec, nil, class: 'form-control' %>
-              </div>
-            </div>
-            <div class="form-group">
-              <%= label_tag :size, 'Angular Size', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                  <%= text_field_tag :size, nil, class: 'form-control' %>
-              </div>
-            </div>
-            
-            <!--=== Optionals ##needs to hide somehow ===-->
-            <p>################################ OPTIONAL ################################</p>
-
-            <div class="form-group">
-              <%= label_tag :intersect, 'Intersect', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= select_tag :intersect, options_for_select([ "", "COVERS", "ENCLOSED", "CENTER", "OVERLAPS" ], ""), class: 'form-control' %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= label_tag :naxis, 'N Axis', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= number_field_tag :naxis, nil, class: 'form-control'%>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= label_tag :cframe, 'C Frame', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= select_tag :cframe, options_for_select([ "", "ICRS", "FK5", "FK4", "ECL", "GAL", "SGAL" ], ""), class: 'form-control' %>
-              </div>
-            </div>
-
-             <div class="form-group">
-              <%= label_tag :rotang, 'Rotang', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                  <%= number_field_tag :rotang, nil, class: 'form-control'%>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= label_tag :proj, 'Proj', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= select_tag :proj, options_for_select([ "", "TAN", "SIN", "ARC" ], ""), class: 'form-control' %>
-              </div>
-            </div>  
-
-            <!--=== Not available yet 
-            <div class="form-group">
-              <%= label_tag :data_type, 'Data Type', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= select_tag :data_type, options_for_select([ "FITS", "VOTable", "JPG" ], "FITS"), class: 'form-control' %>
-              </div>
-            </div>
-            ===-->
-
-            <div class="form-group">
-              <%= label_tag :verb, 'Verbosity', class: 'col-sm-4 control-label' %>
-              <div class="col-sm-5" data-popbox='default'>
-                <%= select_tag :verb, options_for_select([ "", "1", "2", "3"], ""), class: 'form-control' %>
-              </div>
-            </div>
-
-            <!--=== End Optionals ===-->
-
-            <div class="form-group">
-              <%= label_tag :catalogs, 'Catalogs', class: 'col-sm-4 control-label' %>
-              <div id='check_cats' class="col-sm-5" data-popbox='default'>
-                  <div class= "input-group">
-                      <span class="input-group-addon">
-                          <%= check_box_tag :c1, 1, true %>
-                      </span>
-                      <%= label_tag :c1, 'dachs', class: "form-control" %>
-                  </div>
-                  <div class="margin-bottom-10"></div>    
-                  <div class= "input-group">
-                      <span class="input-group-addon">
-                          <%= check_box_tag :c2 %>
-                      </span>
-                      <%= label_tag :c2, 'irsa', class: "form-control" %>
-                  </div>
-              </div>          
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-4 col-sm-5">
-                  <%= submit_tag 'Process', class: 'btn btn-default btn-block' %>
-              </div>
-            </div>
-          <% end %> <!--=== End Form ===-->   
-        </div> <!--/panel-body-->
-      </div> <!--=== End Panel ===-->
-
-       <!--=== Results-Panel ##Should be hidden before submit##add clear button## ===-->
       <div class="panel panel-default margin-bottom-40">
-        
-        <%= render 'results_panel_heading' %>
+        <%= render 'query/simple_image_search/query_list' %>
+      </div> 
 
-        <div id="results-panel-body" class="panel-body">                    
-          hola
-        </div> <!--/results-panel-body-->
-      </div> <!--=== End Results-Panel ===-->
+      <div class="panel panel-default margin-bottom-40">
+        <%= render 'query/simple_image_search/query_result' %>
+      </div> 
 
     </div>
   </div>  
