--- a/app/views/query/simple_image_search/results_panel.js.erb
+++ b/app/views/query/simple_image_search/results_panel.js.erb
@@ -1,25 +1,25 @@
-// $("#estate_process_query_list").removeClass("fa fa-spinner fa-spin fa-lg");
-// $('#resource_list').find('li').remove();
-// $('#resource_content').children('div').remove();
 
-$("#results-panel-body").empty(); //=> clear the results panel
-$(".has-error").removeClass("has-error"); //=> remove all error marks from form (remove red frame)
-var has_error = "";
+<% @results.each_with_index do |(key, value), index| %>
+	
+	<% p key %>
+	<% p value %>
+	
+	$("#testr").append($('<div class="resource_<%= index %>"></div>'));
 
-<% @errors.each do | id | %>
-	$("#<%=id%>").parent().addClass("has-error"); //=> add error mark to form
-	has_error = has_error + "<br>ERROR: <%=id%>";
-<% end %> 
+	myVoview =  new voview({input: {form: "searchForm"}, widgetID: "resource_<%= index %>"});
+	myVoview.renderObject.enableRowSelection();
+	myVoview.gotVotable($.parseXML("<%= escape_javascript(value) %>"));
+	
+	$resource = $('.resource_<%= index %>');
 
-if (!has_error) {
-	<% @params.each_with_index do |(key, value), index| %>
-		<% if value != "" %>
-			$("#results-panel-body").append("<%= key %> : <%= value %> <br>"); //=> print every non blank parameter submited 
-		<% end %>
-	<% end %>
-	$("#results-panel-body").append("<%= @url %> <br>");
+	$li = $("<li></li>");
+	$a = $('<a href="#test<%= index %>" data-toggle="tab"><%= key %></a>');
+	$li.append($a);
 
-}
-else {
-	$("#results-panel-body").append(has_error); //=> if theres an error, it's printed
-}
+	$tab = $('<div class="tab-pane" id="test<%= index %>"></div>');
+	$tab.append($resource);
+
+	$('#resource_list').append($li);
+	$('#resource_content').append($tab);
+
+<% end %>
