--- a/app/views/query/simple_image_search/add_query.js.erb
+++ b/app/views/query/simple_image_search/add_query.js.erb
@@ -7,22 +7,30 @@ var has_error = "";
 <% end %> 
 
 if (!has_error) {
+
 	$table = $("#query_list_table_tbody");
-	id = $table.find("tr").size() + 1;
+	tr_amount = $table.find("tr").size();
+	id = 0;
+	if (tr_amount == 0){
+		id = 1
+	}
+	else {
+		id = parseInt($table.find("tr").last().attr('id')) + 1;	
+	}
 
 	parameters = "Submitted data:";
 	<% @params.each do |key, value| %>
 		parameters = parameters + "<br> <%=key.upcase%>:  <%=value%>";
 	<% end %> 
 
-	$newTR = $("<tr id="+id+"><td><%=@params[:ra]%>,<%=@params[:dec]%></td><td><%=@params[:size]%></td><td></td><td></td><td>"+parameters+"</td></tr>");
+	$newTR = $("<tr id="+id+'> <input type="hidden" name="url_params_'+id+'" value="<%=@url_params%>"> <td><%=@params[:ra]%>,<%=@params[:dec]%></td><td><%=@params[:size]%></td><td></td><td></td><td>'+parameters+"</td></tr>");
 	// parameters' td should be hidden originaly, but a pop up must appear on mouseover
 
 	var multi_select = $('<select/>',{
 		id: 'multi_select_resource'+id,
 		multiple: 'multiple',
 		style: 'float:center',
-		name: 'source_'+id+'[]'
+		name: 'query_'+id+'[]'
 	});
 
 	var delete_button = $('<a/>',
@@ -66,7 +74,7 @@ if (!has_error) {
 	<% sources.each do | key, value | %>
 		var hash = { 
 	    	label: "<%= key[0] %>",
-	    	value: "<%= value[0] %>"
+	    	value: "<%= key[0] %>*@*<%= value[0] %>"
 		};
 		data.push(hash);
 	<% end %>
@@ -75,6 +83,10 @@ if (!has_error) {
 	multi_select.multiselect('dataprovider', data);
 
 	$table.append($newTR);
+
+	$( ".form-control" ).each(function() {
+	  $( this ).val( "" );
+	});
 }
 else {
 	$("#query-form-panel-body").append(has_error); //=> if theres an error, it's printed
